force-app/main/default/objects/Enchantment__c.object
<CustomObject>
    <description>Object representing enchantments on related products</description>
    <fields>
        <fullName>Enchantment_Rating__c</fullName>
        <description>The rating given to this enchantment</description>
        <label>Enchantment Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enchantment_Specification__c</fullName>
        <description>Specifics on the enchantment</description>
        <label>Enchantment Specification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product this enchantment is applied to</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Enchantments</relationshipLabel>
        <relationshipName>Enchantments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Enchantment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Enchantment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enchantments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Enchantment_Name</fullName>
        <active>true</active>
        <description>Ensure the enchantment name adheres to the proper enchantment naming convention.</description>
        <errorConditionFormula>!REGEX(Name,&quot;[a-zA-Z]+.*&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Enchantment name must start with a letter.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enchantment_Rating_Within_200</fullName>
        <active>true</active>
        <description>Ensure the enchantment rating is in the range 1-200</description>
        <errorConditionFormula>!AND(Enchantment_Rating__c &gt; 0, Enchantment_Rating__c &lt; 201)</errorConditionFormula>
        <errorDisplayField>Enchantment_Rating__c</errorDisplayField>
        <errorMessage>Enchantment rating must be within the range 1-200</errorMessage>
    </validationRules>
</CustomObject>