force-app/main/default/objects/Enchantment__c/validationRules/Enchantment_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Enchantment_Name</fullName>
    <active>true</active>
    <description>Ensure the enchantment name adheres to the proper enchantment naming convention.</description>
    <errorConditionFormula>!REGEX(Name,&quot;[a-zA-Z]+.*&quot;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Enchantment name must start with a letter.</errorMessage>
</ValidationRule>