force-app/main/default/objects/Enchantment__c/validationRules/Enchantment_Rating_Within_200.validationRule-meta.xml
<ValidationRule>
    <fullName>Enchantment_Rating_Within_200</fullName>
    <active>true</active>
    <description>Ensure the enchantment rating is in the range 1-200</description>
    <errorConditionFormula>!AND(Enchantment_Rating__c &gt; 0, Enchantment_Rating__c &lt; 201)</errorConditionFormula>
    <errorDisplayField>Enchantment_Rating__c</errorDisplayField>
    <errorMessage>Enchantment rating must be within the range 1-200</errorMessage>
</ValidationRule>